--- a/frontend/src/page/Landing.scss
+++ b/frontend/src/page/Landing.scss
@@ -1,5 +1,48 @@
-
-.landing-container {
-    background-color: black;
+.gt-logo {
+    display: block;
+    width: 43px;
+    height: 43px;
+    fill: rgb(41, 255, 137);
 }
 
+.landing-container {
+    background-color: transparent;
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
+
+.landing-bg-container {
+    z-index: -1;
+    position: absolute;
+    height: 100vh;
+    width: 100vw;
+    background: linear-gradient( rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7) ), url('../assets/images/landing_background.jpg');
+    filter: blur(4px);
+    -webkit-filter: blur(4px);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.landing-title-container {
+    display: flex;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+h1 {
+    color: white;
+    font-size: 1.5rem;
+    margin-left: 10px;
+}
+
+a {
+    position: absolute;
+    right: 10px;
+    bottom: 10px;
+    color: white;
+}
